--- a/Controls/ComboBoxInput.xaml
+++ b/Controls/ComboBoxInput.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="RazorTransform.ComboBoxInput"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    x:Name="root">
+    x:Name="root"  Margin="0">
     <DockPanel>
         <ComboBox x:Name="theComboBox" Style="{StaticResource comboTxtBox}"  SelectedValue="{Binding ComboBoxStr, ElementName=root}" SelectedValuePath="Key" DisplayMemberPath="Value" ItemsSource="{Binding ComboBoxList, ElementName=root}"  VerticalAlignment="Center"/>
     </DockPanel>
