--- a/Controls/FolderInputBox.xaml
+++ b/Controls/FolderInputBox.xaml
@@ -2,8 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:my="clr-namespace:RazorTransform.Controls"
-    x:Name="root">
-    <DockPanel Margin="0">
+    x:Name="root" Margin="0">
+    <DockPanel >
         <my:MyButton Style="{StaticResource extraButton}" x:Name="theButton" DockPanel.Dock="Right" Click="theButton_Click">...</my:MyButton>
         <TextBox Style="{StaticResource txtBox}" x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=theButton}" Text="{Binding FolderName, ElementName=root}" />
     </DockPanel>
