--- a/Controls/GuidInput.xaml
+++ b/Controls/GuidInput.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:my="clr-namespace:RazorTransform.Controls"
-    x:Name="root">
+    x:Name="root" Margin="0">
     <DockPanel>
         <my:MyButton Style="{StaticResource ArrayImageButton}" x:Name="theButton" DockPanel.Dock="Right"  Click="theButton_Click">
             <Image Source="..\Resources\create.png"/>
