--- a/App.xaml
+++ b/App.xaml
@@ -130,6 +130,14 @@
             <Setter Property="Control.Padding" Value="5"/>
             <Setter Property="Control.Margin" Value="0"/>
         </Style>
+        <Style x:Key="txtBlockValue">
+            <Setter Property="Control.FontFamily" Value="Arial"/>
+            <Setter Property="Control.FontSize" Value="14"/>
+            <Setter Property="Control.Padding" Value="5"/>
+            <Setter Property="Control.Margin" Value="0"/>
+            <Setter Property="Control.FontStyle" Value="Italic"/>
+            <Setter Property="Control.VerticalAlignment" Value="Center"/>
+        </Style>
         <Style x:Key="labelUnits">
             <Setter Property="Control.FontFamily" Value="Arial"/>
             <Setter Property="Control.FontSize" Value="14"/>
