--- a/Controls/GuidInput.xaml
+++ b/Controls/GuidInput.xaml
@@ -2,10 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:my="clr-namespace:RazorTransform.Controls"
-    x:Name="root" Margin="0">
+    x:Name="root" Margin="0" >
     <DockPanel>
-        <my:MyButton Style="{StaticResource ArrayImageButton}" x:Name="theButton" DockPanel.Dock="Right"  Click="theButton_Click">
-            <Image Source="..\Resources\create.png"/>
+        <my:MyButton Style="{StaticResource extraButton}" x:Name="theButton" DockPanel.Dock="Right"  Click="theButton_Click">
+           +
         </my:MyButton>
         <TextBox Style="{StaticResource txtBox}" x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=theButton}" Text="{Binding GuidStr, ElementName=root}"/>
     </DockPanel>
