--- a/Controls/ModelItemEdit.xaml
+++ b/Controls/ModelItemEdit.xaml
@@ -6,7 +6,7 @@
     Margin="0">
     <DockPanel>
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-            <TextBlock Style="{StaticResource txtBlockValue}" x:Name="arrow" Margin="10,0,5,0" Visibility="Collapsed">=></TextBlock>
+            <TextBlock Style="{StaticResource txtBlockValue}" x:Name="arrow" Margin="10,0,5,0" Visibility="Collapsed">=</TextBlock>
             <TextBlock Style="{StaticResource txtBlockValue}" x:Name="expandedValue" Text="{Binding ExpandedValue, ElementName=root}" Margin="0,0,10,0" Visibility="Collapsed" />
         </StackPanel>
         <DockPanel>
