--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="RazorTransform.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
-             xmlns:my="clr-namespace:RazorTransform.Controls">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <Color x:Key="TabInactive" >LightGray</Color>
         <Color x:Key="DarkColor" >#D9C789</Color>
@@ -76,7 +75,7 @@
             <Setter Property="Control.Margin" Value="5"/>
             <Setter Property="Control.Template" Value="{StaticResource ButtonTemplate}"/>
         </Style>
-        <Style x:Key="ArrayImageButton" TargetType="my:MyButton" >
+        <Style x:Key="ArrayImageButton" TargetType="Button" >
             <Setter Property="Margin" Value="3  "/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="Width" Value="32"/>
@@ -87,7 +86,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        <Style x:Key="ArrayNewImageButton" TargetType="my:MyButton" >
+        <Style x:Key="ArrayNewImageButton" TargetType="Button" >
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="Width" Value="32"/>
@@ -98,10 +97,10 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        <Style TargetType="my:MyTabControl" x:Key="tabControlStyle">
+        <Style TargetType="TabControl" x:Key="tabControlStyle">
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
-        <Style TargetType="my:MyTabItem" x:Key="tabStyle">
+        <Style TargetType="TabItem" x:Key="tabStyle">
             <Setter Property="Background">
                 <Setter.Value>
                     <SolidColorBrush Color="{StaticResource TabInactive}"/>
@@ -144,25 +143,25 @@
             <Setter Property="Control.Padding" Value="5"/>
             <Setter Property="Control.Margin" Value="0"/>
         </Style>
-        <Style TargetType="my:MyButton" x:Key="txtButton">
+        <Style TargetType="Button" x:Key="txtButton">
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Margin" Value="0"/>
             <Setter Property="Template" Value="{StaticResource ButtonTemplate}"/>
         </Style>
-        <Style TargetType="my:MyButton" x:Key="extraButton">
+        <Style TargetType="Button" x:Key="extraButton">
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="Margin" Value="0"/>
             <Setter Property="Control.Width" Value="32"/>
         </Style>
-        <Style TargetType="my:MyButton" x:Key="mainButton">
+        <Style TargetType="Button" x:Key="mainButton">
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Template" Value="{StaticResource ButtonTemplate}"/>
         </Style>
-        <Style TargetType="my:MyButton" >
+        <Style TargetType="Button" >
             <Style.Resources>
                 <Style TargetType="Image">
                     <Style.Triggers>
@@ -173,7 +172,7 @@
                 </Style>
             </Style.Resources>
         </Style>
-        <Style TargetType="my:MyButton" x:Key="mainImageButton">
+        <Style TargetType="Button" x:Key="mainImageButton">
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="Width" Value="32"/>
