--- a/Controls/EditItemBox.xaml
+++ b/Controls/EditItemBox.xaml
@@ -1,7 +1,6 @@
 ﻿<UserControl x:Class="RazorTransform.EditItemBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:my="clr-namespace:RazorTransform.Controls"
     x:Name="root" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
      d:DesignHeight="55" d:DesignWidth="300">
     <Grid Margin="5">
@@ -11,15 +10,15 @@
         </Grid.ColumnDefinitions>
         <TextBox Grid.Column="0" Style="{StaticResource txtBox}" x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=btnEdit}" Text="{Binding ItemName, ElementName=root}"  IsEnabled="False" IsReadOnly="True" />
         <DockPanel Grid.Column="1">
-        <my:MyButton x:Name="btnCopy" Style="{StaticResource ArrayImageButton}" DockPanel.Dock="Right"  ToolTip="Copy the item" Click="btnCopy_Click">
+        <Button x:Name="btnCopy" Style="{StaticResource ArrayImageButton}" DockPanel.Dock="Right"  ToolTip="Copy the item" Click="btnCopy_Click">
                 <Image Source="..\resources\copy.png"/>
-            </my:MyButton>
-            <my:MyButton x:Name="btnDel" Style="{StaticResource ArrayImageButton}" DockPanel.Dock="Right" ToolTip="Delete the item from the list" Click="btnDel_Click">
+            </Button>
+            <Button x:Name="btnDel" Style="{StaticResource ArrayImageButton}" DockPanel.Dock="Right" ToolTip="Delete the item from the list" Click="btnDel_Click">
                 <Image Source="..\resources\delete.png"/>
-            </my:MyButton>
-            <my:MyButton x:Name="btnEdit" Style="{StaticResource ArrayImageButton}" DockPanel.Dock="Right" ToolTip="Edit the item" Click="btnEdit_Click">
+            </Button>
+            <Button x:Name="btnEdit" Style="{StaticResource ArrayImageButton}" DockPanel.Dock="Right" ToolTip="Edit the item" Click="btnEdit_Click">
                 <Image Source="..\resources\edit.png"/>
-            </my:MyButton>
+            </Button>
     </DockPanel>
     </Grid>
 </UserControl>
