--- a/Controls/FileInputBox.xaml
+++ b/Controls/FileInputBox.xaml
@@ -1,10 +1,9 @@
 <UserControl x:Class="RazorTransform.FileInputBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:my="clr-namespace:RazorTransform.Controls"
     x:Name="root" Margin="0">
   <DockPanel>
-        <my:MyButton Style="{StaticResource extraButton}" x:Name="theButton" DockPanel.Dock="Right" Click="theButton_Click">...</my:MyButton>
+        <Button Style="{StaticResource extraButton}" x:Name="theButton" DockPanel.Dock="Right" Click="theButton_Click">...</Button>
     <TextBox Style="{StaticResource txtBox}" x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=theButton}" Text="{Binding FileName, ElementName=root}" />
   </DockPanel>
 </UserControl>
