--- a/Controls/MainEdit.xaml
+++ b/Controls/MainEdit.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:my="clr-namespace:RazorTransform.Controls"
              xmlns:local="clr-namespace:RazorTransform"
              xmlns:psGui="clr-namespace:PSHostGui"
              mc:Ignorable="d" 
@@ -26,26 +25,26 @@
 
                 </DockPanel.Background>
                 <StackPanel HorizontalAlignment="Left" Margin="5,5,0,0" Orientation="Horizontal">
-                    <my:MyButton x:Name="btnSettings" Click="btnSettings_Click" Style="{StaticResource mainImageButton}" Visibility="Collapsed" ToolTip="Settings">
+                    <Button x:Name="btnSettings" Click="btnSettings_Click" Style="{StaticResource mainImageButton}" Visibility="Collapsed" ToolTip="Settings">
                         <Image Source="..\Resources\Gear.png"/>
-                    </my:MyButton>
-                    <my:MyButton x:Name="btnRefresh" Click="btnRefresh_Click" Style="{StaticResource mainImageButton}" Visibility="Visible" ToolTip="Refresh">
+                    </Button>
+                    <Button x:Name="btnRefresh" Click="btnRefresh_Click" Style="{StaticResource mainImageButton}" Visibility="Visible" ToolTip="Refresh">
                         <Image Source="..\Resources\Refresh.png" ></Image>
-                    </my:MyButton>
+                    </Button>
                 </StackPanel>
                 <StackPanel  Orientation="Horizontal" HorizontalAlignment="Right" >
-                    <my:MyButton Style="{StaticResource mainImageButton}" HorizontalAlignment="Left" x:Name="btnOkAndClose" VerticalAlignment="Top" Click="btnOkAndClose_Click"  ToolTip="Run the transforms and if ok, exit." Visibility="Hidden">
+                    <Button Style="{StaticResource mainImageButton}" HorizontalAlignment="Left" x:Name="btnOkAndClose" VerticalAlignment="Top" Click="btnOkAndClose_Click"  ToolTip="Run the transforms and if ok, exit." Visibility="Hidden">
                         <Image Source="..\Resources\PlayClose.png"/>
-                    </my:MyButton>
-                    <my:MyButton Style="{StaticResource mainImageButton}" HorizontalAlignment="Left"  x:Name="btnOk" VerticalAlignment="Top" Click="btnOk_Click" ToolTip="Run the transforms." IsEnabled="False">
+                    </Button>
+                    <Button Style="{StaticResource mainImageButton}" HorizontalAlignment="Left"  x:Name="btnOk" VerticalAlignment="Top" Click="btnOk_Click" ToolTip="Run the transforms." IsEnabled="False">
                         <Image Source="..\Resources\Play.png"/>
-                    </my:MyButton>
-                    <my:MyButton Style="{StaticResource mainImageButton}" HorizontalAlignment="Left"  x:Name="btnSave" VerticalAlignment="Top" Visibility="Collapsed"  ToolTip="Save the current values." Click="btnSave_Click">
+                    </Button>
+                    <Button Style="{StaticResource mainImageButton}" HorizontalAlignment="Left"  x:Name="btnSave" VerticalAlignment="Top" Visibility="Collapsed"  ToolTip="Save the current values." Click="btnSave_Click">
                         <Image Source="..\Resources\Save.png"/>
-                    </my:MyButton>
-                    <my:MyButton Style="{StaticResource mainImageButton}"  HorizontalAlignment="Right" x:Name="btnCancel" VerticalAlignment="Top" IsCancel="True" Click="btnCancel_Click" IsEnabled="False" ToolTip="Close">
+                    </Button>
+                    <Button Style="{StaticResource mainImageButton}"  HorizontalAlignment="Right" x:Name="btnCancel" VerticalAlignment="Top" IsCancel="True" Click="btnCancel_Click" IsEnabled="False" ToolTip="Close">
                         <Image Source="..\Resources\Cancel.png"/>
-                    </my:MyButton>
+                    </Button>
                 </StackPanel>
             </DockPanel>
         </Border>
