--- a/UI/ArrayItemEdit.xaml
+++ b/UI/ArrayItemEdit.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:RazorTransform"
-        xmlns:my="clr-namespace:RazorTransform.Controls"
         Title="Item Edit" Height="450" Width="784" WindowStyle="SingleBorderWindow" 
         ShowInTaskbar="False"
         MinHeight="100" MinWidth="300">
@@ -20,12 +19,12 @@
                 </StackPanel.Background>
                 <DockPanel  HorizontalAlignment="Right" >
 
-                    <my:MyButton Style="{StaticResource mainImageButton}" x:Name="btnOk" VerticalAlignment="Top" Click="btnOk_Click" IsDefault="True">
+                    <Button Style="{StaticResource mainImageButton}" x:Name="btnOk" VerticalAlignment="Top" Click="btnOk_Click" IsDefault="True">
                         <Image Source="..\Resources\Apply.png"/>
-                    </my:MyButton>
-                    <my:MyButton Style="{StaticResource mainImageButton}" x:Name="btnCancel" VerticalAlignment="Top" IsCancel="True" Click="btnCancel_Click">
+                    </Button>
+                    <Button Style="{StaticResource mainImageButton}" x:Name="btnCancel" VerticalAlignment="Top" IsCancel="True" Click="btnCancel_Click">
                         <Image Source="..\Resources\Cancel.png"/>
-                    </my:MyButton>
+                    </Button>
                 </DockPanel>
             </StackPanel>
 
